# cmd/api/main.go
@@ -1,3 +1,12 @@
+// @title           Go Backend API
+// @version         1.0
+// @description     REST API backend
+// @host             localhost:8080
+// @BasePath         /api/v1
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and the access token
 package main
 
 import (
